fix event-page title align

--- a/frontend/src/pages/eventInfo/event.css
+++ b/frontend/src/pages/eventInfo/event.css
@@ -28,6 +28,7 @@
 .event-page-title {
     font-size: 48px;
     font-weight: 700;
+    text-align: center;
 }
 
 .places-badge {
